--- a/client/index.html
+++ b/client/index.html
@@ -59,5 +59,13 @@
         </tfoot>
     </table>
     
+    <script src="app/domain/negociacao/Negociacao.js"></script>
+    <script>
+        let n1 = new Negociacao(new Date(), 5, 400);
+        console.log(n1.data);
+        console.log(n1.quantidade);
+        console.log(n1.valor);
+        console.log(n1.volume);
+    </script>
 </body>
 </html>
