--- a/client/index.html
+++ b/client/index.html
@@ -62,9 +62,9 @@
 
     <script src="app/domain/negociacao/Negociacao.js"></script>
     <script>
-        var n1 = new Negociacao();
-        n1.quantidade = 10;
-        console.log(n1);
+        var n1 = new Negociacao(new Date(), 5, 100);
+        var volume = n1.quantidade * n1.valor;
+        console.log(volume);
     </script>
 </body>
 </html>
