--- a/client/index.html
+++ b/client/index.html
@@ -62,9 +62,10 @@
 
     <script src="app/domain/negociacao/Negociacao.js"></script>
     <script>
-        var n1 = new Negociacao(new Date(), 5, 100);
-        var volume = n1.quantidade * n1.valor;
-        console.log(volume);
+        var n1 = new Negociacao(new Date(), 3, 100);
+        console.log(n1.getQuantidade());
+        console.log(n1.getValor());
+        console.log(n1.getData());
     </script>
 </body>
 </html>
