--- a/client/index.html
+++ b/client/index.html
@@ -63,12 +63,12 @@
     <script src="app/domain/negociacao/Negociacao.js"></script>
     <script>
         var n1 = new Negociacao(new Date(), 3, 100);
-        n1.quantidade = 1000;
         
-        console.log(n1.quantidade);
-        console.log(n1.valor);
         console.log(n1.data);
-        console.log(n1.volume);
+
+        n1.data.setDate(11);
+
+        console.log(n1.data);
     </script>
 </body>
 </html>
